<resources>
    <string name="app_name">Siklab</string>
    <string name="home_title">Welcome to Siklab!</string>
    <string name="home_subtitle">Your #1 Fire Safety and Prevention Interactive Learning Application</string>
    <string name="home_button_lessons">Lessons</string>
    <string name="home_button_quizes">Quizzes</string>
    <string name="home_button_progress">Progress</string>
    <string-array name="lesson_list">
        <item>Understanding the Nature of Fire</item>
        <item>Stages of Fire</item>
        <item>Classes of Fire and Methods of Heat Transfer</item>
        <item>Fire Safety Tips</item>
        <item>Fire Safety First Aid</item>
    </string-array>
    <string name="lesson_one_paragraph_one">
        Fire itself is a chemical phenomenon, all fuels are (synthetic or organic) chemical compounds and when fuel is ignited, the result is a chemical reaction with predictable physical effects.\n
        - A small fire can produce enough smoke to fill a building in minutes. Smoke results in:\n
        - Teary eyes\n
        - Choking sensation\n
        - Impaired judgment due to Carbon Monoxide (CO)\n
        - Loss of spatial recognition\n
        - Sedation effect - Respiratory failure\n
        - Within minutes, air temperature in a burning room can reach 300 degrees Celsius. This temperature is hot enough to melt clothes, skin and scorch your lungs in one breathe.\n
        - Temperatures can climb to between 650-760 degrees Celsius.\n
        - Most people who die in fires, die from breathing smoke and toxic gases. Carbon Oxide, Hydrogen Cyanide, Ammonia and hundreds of other irritants attack your eyes, nose, throat and lungs. They numb your senses and leave you dazed.\n\n
        Bureau of Fire Protection\n
        - Through the enactment of the RA 6975, also known as the DILG Act of 1990, the Fire Service was separated from the PC-INP as a separate and distinct agency as Bureau of Fire Protection on August 2, 1991.\n\n
        - BFP is mandated to prevent  and suppress destructive fires, conduct investigation, provide emergency medical and rescue services and enforce the Republic Act 9514.\n\n
        The Tetrahedron of Fire\n
    </string>
    <string name="lesson_one_paragraph_two">
        The diffusion flame process (fire) is a rapid self-sustaining oxidation process accompanied by the evolution of heat and light of varying intensities.\n
        Fire consists of three basic elements, as represented by the fire triangle: HEAT, FUEL and OXYGEN.\n
    </string>
    <string name="lesson_two_paragraph_one">
        IGNITION STAGE\n
        Point wherein the fire starts\n
        There is plenty of oxygen, little heat and smoke\n
        Fire is still small and generally confined to the fuel that initially ignited\n\n

        GROWTH STAGE\n
        Temperature and smoke level increases\n
        Oxygen level decreased and the fuel is already dried out\n
        Hot gasses rise to the ceiling and spreads outward the walls\n
        Can be continuous if there is enough fuel and oxygen\n
        The smoke layer is getting thicker and fire is starting to spread to nearby furniture\n\n

        FLASH OVER\n
        Transition between growth and fully developed stage\n
        Presence of huge smoke which indicates the rapid change of situation\n
        May involve exposed combustibles\n
        Increasing level of smoke with decreased visibility\n
        Gasses are generated by heat\n\n

        FULLY DEVELOPED\n
        All combustibles materials present are continuously burning\n
        Maximum amount of heat is released\n
        The volume of fire is dependent of the number and size of ventilation openings\n
        Unburned gasses begin flowing to adjacent spaces and ignite once it enters a space where air more abundant\n\n

        DECAY\n
        Intensity of fire decreasing due to lack of available fuel\n
        Most of fuel consumed\n
        Effort concentrated on cooling of the remaining fuel\n
    </string>
    <string name="lesson_three_paragraph_one">
        A fire is classified according to the fuel it consumes\n
        CLASS A\n
        Ordinary combustibles or fibrous material, such as wood, paper, cloth, rubber and some plastics.\n
    </string>
    <string name="lesson_three_paragraph_two">
        CLASS B\n
        Flammable or combustible liquids such as gasoline, kerosene, paint, paint thinners and propane.\n
    </string>
    <string name="lesson_three_paragraph_three">
        CLASS C\n
        Energized electrical equipment, such as appliances, switches, panel boxes and power tools.\n
    </string>
    <string name="lesson_three_paragraph_four">
        CLASS D\n
        Certain combustible metals, such as magnesium, titanium, potassium and sodium. They may react violently with water or other chemicals, and must be handled with care.\n
    </string>
    <string name="lesson_three_paragraph_five">
        CLASS K\n
        Fires involving combustible cooking fluids such as oils and fats.\n
    </string>
    <string name="lesson_three_paragraph_six">
        METHODS OF HEAT TRANSFER\n
        1. By Radiation\n
        -With heat rays causing nearby combustible objects to burst into flames\n
        2. By Convection\n
        -Through the action of heat arising within a structure, bringing along poisonous gases and smoke.\n
        -The most life-threatening\n
        -Fastest way fire travels\n
        3. By Direct Contact/Conduction\n
        -With the flame catching from one object to another
    </string>
    <string name="lesson_four_paragraph_one">
        1. Identify and report fire hazards and unsafe work practices.\n
        2. Unplug all electrical equipment when not in operation, unless necessary.\n
        3. Maintain proper housekeeping.\n
        4. Familiarize and keep emergency exits marked, lighted and free from any obstruction.\n
        5. Familiarize location of fire alarm, fire extinguishers and other fire fighting equipment.\n
        6. Enforce “No Smoking” policy.\n
        7. Avoid overloading of electrical circuits by plugging many appliances.\n
        8. Do not store large volume of combustible liquids without proper clearance/permit and fire protection.\n
        9. Ensure complete attendance of ALL fire brigade members during Fire Safety Seminars and Drills\n
        10. Regularly conduct emergency drills (internal).\n\n
        It\'s also good to memorize the direct lines of fire stations near your home and work places. For Metro Manila residents, you can dial 117.\n
    </string>
    <string name="lesson_five_paragraph_one">
        The three Golden Rules to follow to ensure that you and your family are safe from fire are:\n
        - Prevention\n
        - The best way to be “fire safe” is to make sure that fires never happen.\n
        - Detection\n
        - If a fire starts in your home, an early warning will give you maximum time to escape.\n
        - Evacuation\n
        - When you get a warning that there is a fire, you need to evacuate as quickly and efficiently as possible, using a pre-arranged evacuation plan.\n\n
        However if you should fall victim of a fire and suffer burns or smoke inhalation here some basic First Aid tips:\n
        - The number one cause of death related to fires is smoke inhalation. An estimated 50%-80% of fire deaths are the result of smoke inhalation injuries rather than burns.\n
        - The First Aid treatment for someone exposed to smoke inhalation is to remove the person from the scene and bring her/him outside to get fresh air.\n
        - Make sure that you don’t put yourself in danger. Don’t risk to being a dead hero!\n
        - Monitor the casualty as she/he can deteriorate very quickly. Be prepared to commence CPR.\n
        - If the following symptoms are present, get the casualty to an Emergency department:\n
        - hoarse voice\n
        - difficulty breathing\n
        - prolonged coughing\n
        - casualty appears to be confused\n\n
        If the casualty has to be transferred to hospital, make sure you call for an ambulance. Don’t risk bringing the casualty in a private car as they can get worse very quickly and will need emergency medical aid. Only ambulance staff can administer the number one treatment – oxygen. Depending on the severity of the smoke inhalation this ranges from nasal tubes to intubation.\n\n


        Most burns are minor and don’t need medical attention. However if clothing is burning, have the casualty roll on the ground. Smother flames with a blanket or douse the casualty in water.\n
        First Aid Tips:\n
        - Cool the area with running cold water for 10 minutes\n
        - If water is not available us other harmless fluids\n
        - Remove any constrictive jewellery or clothing before area will start to swell\n
        - If clothing is stuck to skin DO NOT remove\n
        - Dress the burn with sterile dressing that won’t stick.\n
        - Tip – use cling film or new unused plastic bag. Don’t wrap too tight.\n
        - For large second degree and all third degree burns seek medical attention\n
        - Monitor breathing as swelling of the airways can occur up to 24 hours after the initial burn\n\n
        CAUTION – DO NOT:\n
        - Break any blisters. Intact blisters serve as an excellent burn dressing.\n
        - Touch the burn.\n
        - Apply lotions, ointments or butter.\n
        - Apply adhesive tape or dressings.\n
        - Remove clothing that has stuck to the burn\n
    </string>
    <string-array name="lesson_one_questions">
        <item>A fire will double every _______ seconds.</item>
        <item>Also known as DILG Act of 1990 that recognized BFP as a separate and distinct agency.</item>
        <item>The three basic elements of fire are Fuel, Oxygen and _______.</item>
        <item>Within minutes, _______ temperature in a burning room can reach 300 degrees Celsius.</item>
        <item>The cause why most people die in fire incidents.</item>
    </string-array>
    <string-array name="lesson_one_quiz_one_options">
        <item>10</item>
        <item>60</item>
        <item>30</item>
    </string-array>
    <string-array name="lesson_one_quiz_two_options">
        <item>RA 10173</item>
        <item>RA 6975</item>
        <item>RA 2039</item>
    </string-array>
    <string-array name="lesson_one_quiz_three_options">
        <item>Heat</item>
        <item>Water</item>
        <item>Chemicals</item>
    </string-array>
    <string-array name="lesson_one_quiz_four_options">
        <item>Fire</item>
        <item>Air</item>
        <item>Earth</item>
    </string-array>
    <string-array name="lesson_one_quiz_five_options">
        <item>Burns</item>
        <item>Injuries</item>
        <item>Breathing Smoke</item>
    </string-array>
    <string-array name="lesson_two_questions">
        <item>Stage where most fire is consumed.</item>
        <item>Stage where there is an increasing level of smoke with decreased visibility.</item>
        <item>Stage where fire is generally confined to the fuel that initially started.</item>
        <item>Stage where all combustibles materials present are continuously burning.</item>
        <item>Stage where oxygen level decreased and the fuel is already dried out.</item>
    </string-array>
    <string-array name="lesson_two_quiz_one_options">
        <item>Decay</item>
        <item>Ignition</item>
        <item>Fully Developed</item>
    </string-array>
    <string-array name="lesson_two_quiz_two_options">
        <item>Flash Over</item>
        <item>Growth</item>
        <item>Fully Developed</item>
    </string-array>
    <string-array name="lesson_two_quiz_three_options">
        <item>Fully Developed</item>
        <item>Ignition</item>
        <item>Growth</item>
    </string-array>
</resources>