<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/siklab"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="22dp"/>

        <Button
            android:id="@+id/btn_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/btn_redroundedbutton"
            android:text="@string/home_button_lessons"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:elevation="3dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btn_quizzes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/btn_redroundedbutton"
            android:text="@string/home_button_quizes"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:elevation="3dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btn_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/btn_redroundedbutton"
            android:text="@string/home_button_progress"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:elevation="3dp"
            android:layout_marginBottom="12dp"/>

    </LinearLayout>

</RelativeLayout>